[package]
name = "wlb"
version = "0.1.0"
authors = ["ereichert"]

[dependencies]
iron = "0.4.0"
env_logger = "0.3.4"
handlebars = "0.20.5"
handlebars-iron = "0.18.0"
router = "0.4.0"
mount = "0.2.1"
staticfile = "0.3.0"
tojson_macros = "0.3.2"
rustc-serialize = "0.3.19"
urlencoded = "0.4.1"

[dev-dependencies]
iron-test = "0.4.0"

[features]
default = ["handlebars-iron/watch"]