[package]
name = "wlb"
version = "0.1.0"
authors = ["ereichert"]

[dependencies]
rocket = "0.1.1"
rocket_codegen = "0.1.1"
rustc-serialize = "0.3.19"
serde = "*"
serde_derive = "*"
serde_json = "*"
tojson_macros = "0.3.2"

#[features]
#default = ["handlebars-iron/watch"]

[dependencies.rocket_contrib]
version = "0.1.1"
default-features = false
features = ["handlebars_templates"]